@@ -42,6 +42,7 @@ ELEMENT *end_preformatted (ELEMENT *current);
 char *read_command_name (char **ptr);
 ELEMENT *merge_text (ELEMENT *current, char *text);
 void start_empty_line_after_command (ELEMENT *current, char **line_inout);
+ELEMENT *trim_spaces_comment_from_content (ELEMENT *original);
 
 extern const char *whitespace_chars, *whitespace_chars_except_newline;
 extern const char *digit_chars;
@@ -65,6 +66,7 @@ ELEMENT *item_multitable_parent (ELEMENT *current);
 /* In extra.c */
 void add_extra_key_element (ELEMENT *e, char *key, ELEMENT *value);
 void add_extra_key_contents (ELEMENT *e, char *key, ELEMENT *value);
+void add_extra_key_contents_array (ELEMENT *e, char *key, ELEMENT *value);
 void add_extra_key_text (ELEMENT *e, char *key, ELEMENT *value);
 void add_extra_key_index_entry (ELEMENT *e, char *key, INDEX_ENTRY_REF *value);
 void add_extra_key_misc_args (ELEMENT *e, char *key, ELEMENT *value);
